--- a/coldcard_address_generator_html_standalone.html
+++ b/coldcard_address_generator_html_standalone.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>demo_0002</title>
+    <title>Generate receive and change keys from xpubs for bitcoin BIP44 BIP49 BIP84</title>
     <script>
 
 function bip44(){
